fixed issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 @import url('https://unpkg.com/css.gg@2.0.0/icons/css/push-chevron-down.css');
 
 :root{
-    --micro-font-size: 1.5rem; /* 25px */
-    --small-font-size: 2rem; /* 30px */
-    --middle-font-size: 5rem; /* 80px */
-    --large-font-size: 7rem; /* 120px */
+    --micro-font-size: 1.5vw; /* 25px */
+    --small-font-size: 2vw; /* 30px */
+    --middle-font-size: 5vw; /* 80px */
+    --large-font-size: 7vw; /* 120px */
     --black: #111111;
     --white: #FAFAFA;
     --red: #D4202C;
@@ -52,7 +52,7 @@ body {
 
 .hidden-content {
     opacity: 0.0;
-    transform: translateX(-100vw);
+    transform: translateX(-80vw);
 }
 
 .visible-content{
@@ -79,7 +79,6 @@ body {
 .navbar-logo-img{
     margin: 5px;
     height: calc(100% - 10px);
-    aspect-ratio: 1;
 }
 
 .navbar-list{
@@ -139,7 +138,7 @@ body {
 
 .main-logo-img{
     width: 100%;
-    height: 80%;
+    margin: auto;
 }
 
 .main-right{
@@ -224,7 +223,7 @@ body {
 }
 
 .countdown{
-    width: 200px; /* 200px*/
+    width: calc(var(--large-font-size) * 1.5); /* 200px*/
     height: calc(var(--countdownHeight) * 1.5);
     --countdownHeight: calc(var(--middle-font-size) * 1.6);
     text-align: center;
@@ -492,11 +491,11 @@ body {
         align-items: center;
         height: 15vh;
     }
-    .navbar-logo-img{
-        height: 50%;
-    }
     .register-btn{
         height: fit-content;
+    }
+    .navbar-logo-img{
+        height: 25%;
     }
 }
 
